--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,19 @@
 html {
     scroll-behavior: smooth;
   }
+  @keyframes scroll {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .animate-scroll {
+    display: flex;
+    animation: scroll 20s linear infinite;
+    will-change: transform;
+  }
+  
   
